Base skill cosmetics change